Replace deprecated `java.lang.Class.newInstance()`